test run with c2k and 10M only to check GC effects